# griddown

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ios-testflight.yml  ios.yml  test.yml
public/: handbook.json  plants.json  region.example.json  states.json
src/: campsite.ts  compass.ts  confirm.ts  customarea.ts  dem.ts  demgrid.ts  dialog.ts  esc.ts  fish.ts  forage.ts  geo.ts  geoloc.ts  geomag.ts  goto.ts  gpx.ts  handbook.ts  lakes.ts  main.ts  measure.ts  mesh.ts  meshnode.ts  mvum.ts  mvumindex.ts  overprint.ts  panels.ts  paper.ts  plantpanel.ts  plants.ts  print.ts  profile.ts  publicland.ts  readiness.ts  route.ts  routegraph.ts  save.ts  search.ts  season.ts  sky.ts  states.ts  store.ts  (+10 more)
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mesh.rs  mesh_fixtures.rs  packs.rs  pmtiles_extract.rs
tests/: campsite.test.ts  compass.test.ts  customarea.test.ts  demgrid.test.ts  dialog.test.ts  fish.test.ts  forage.test.ts  geo.test.ts  geomag.test.ts  gpx.test.ts  lakes.test.ts  meshnode.test.ts  mvum.test.ts  mvumindex.test.ts  paper.test.ts  plants.test.ts  profile.test.ts  publicland.test.ts  routegraph.test.ts  search.test.ts  season.test.ts  sky.test.ts  utm.test.ts  viewshed.test.ts  wakelock.test.ts
tools/: compute_sizes.mjs  fake_meshtastic.py  fetch_dem.py  fetch_plants.mjs  fetch_state_pmtiles.sh  gen_mesh_fixtures.py  gen_wmm.mjs  plants-curated.json
