[package]
name = "griddown"
version = "0.1.6"
description = "Offline topographic maps for when the grid is down"
authors = ["pl0xuee"]
edition = "2021"
# The pack builder (src/bin/build-pack.rs) is a second binary in this crate, and
# a second binary makes a bare `cargo run` ambiguous — which is what `tauri dev`
# runs. Without this, dev refuses to start at all.
default-run = "griddown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "griddown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-dialog = "2.7.2"

# PMTiles archive writing, replacing the go-pmtiles sidecar (iOS forbids
# spawning subprocesses).
#
# `default-features = false` is load-bearing, not hygiene: the defaults pull in
# zstd-sys, which compiles bundled C and is a common iOS cross-compilation
# snag, plus mmap and S3/object-store backends we have no use for. We take the
# writer only — it's sync, so it needs no async runtime — and read the remote
# archive ourselves via the reqwest already above. The crate's reader keeps
# tile byte offsets private, which makes coalescing adjacent range requests
# impossible; see pmtiles_extract.rs for why that matters.
pmtiles = { version = "0.23", default-features = false, features = ["write"] }
# Directory blocks inside a PMTiles archive are gzip-compressed.
flate2 = "1"
# Verifying pre-built packs against the sha256 in the CI manifest. A pack is a
# half-gigabyte file fetched over a phone connection; "it downloaded" is not the
# same as "it arrived intact".
sha2 = "0.10"

# Updater is desktop-only and must not be built into debug binaries: the plugin
# deserializes its config to null under `tauri dev` and fails to initialise.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

